k8s-monitoring/multicluster-monitoring/thanos/1-querier-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: querier
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: querier
  template:
    metadata:
      labels:
        app.kubernetes.io/name: querier
    spec:
      serviceAccount: thanos
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: querier
          image: docker.dc.afranet.co/bitnami/thanos:0.32.0
          args:
            - query
            - --log.level=info
            - --endpoint.info-timeout=10m
            - --grpc-address=0.0.0.0:10901
            - --http-address=0.0.0.0:10902
            - --query.replica-label=prometheus_replica
            - --endpoint=dnssrv+_grpc._tcp.storegateway
            - --endpoint=dnssrv+receiver-store-1:10907
              #   - --endpoint=dnssrv+receiver-store-2:10907
              #- --endpoint=dnssrv+receiver-store-3:10907
#             - --endpoint=dnssrv+receiver-store-4:10907

          ports:
            - name: http
              containerPort: 10902
              protocol: TCP
            - name: grpc
              containerPort: 10901
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/healthy
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/ready
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 1000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 4Gi
