k8s-monitoring/multicluster-monitoring/thanos/6-compactor-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: compactor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: compactor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: compactor
    spec:
      serviceAccount: thanos
      securityContext:
        fsGroup: 1001
      containers:
        - name: compactor
          image: docker.dc.afranet.co/bitnami/thanos:0.32.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
          args:
            - compact
            - --log.level=info
            - --http-address=0.0.0.0:10902
            - --data-dir=/data
            - --retention.resolution-raw=7d
            - --retention.resolution-5m=30d
            - --retention.resolution-1h=60d
            - --consistency-delay=30m
            - --objstore.config-file=/conf/objstore.yml
            - --wait
          ports:
            - name: http
              containerPort: 10902
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/healthy
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /-/ready
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 2000m
              memory: 6000Mi
            limits:
              cpu: 4000m
              memory: 10000Mi
          volumeMounts:
            - name: objstore
              mountPath: /conf/objstore.yml
              subPath: objstore.yml
            - name: data
              mountPath: /data
      volumes:
        - name: objstore
          secret:
            secretName: objstore
        - name: data
          persistentVolumeClaim:
            claimName: compactor
