k8s-monitoring/multicluster-monitoring/thanos/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: querier-url
  namespace: monitoring
spec:
  entryPoints:
      - web
      - websecure
  routes:
   - kind: Rule
     match: Host(`querier.dc.afranet.prod`)
     services:
     - name: querier
       port: 9090
  tls:
    secretName: querier-afranet-secret
